ansible/playbooks/files/networkpolicy/baseline-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baseline-default-deny-all
  labels:
    managed-by: otus-diplom
    stage: P4B
    profile: baseline
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
