ansible/playbooks/files/networkpolicy/validation-allow-client-egress-to-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: validation-allow-client-egress-to-server
  labels:
    managed-by: otus-diplom
    stage: P4B
    profile: validation
spec:
  podSelector:
    matchLabels:
      role: client
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: server
      ports:
        - protocol: TCP
          port: 8080
