ansible/playbooks/files/networkpolicy/validation-allow-server-ingress-from-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: validation-allow-server-ingress-from-client
  labels:
    managed-by: otus-diplom
    stage: P4B
    profile: validation
spec:
  podSelector:
    matchLabels:
      role: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: client
      ports:
        - protocol: TCP
          port: 8080
